<resources>


    <string name="current_year" translatable="false">2021</string>
    <string name="app_name" translatable="false">ESEO S8 Application</string>

    <string name="luminosity">Luminosité</string>
    <string name="battery">Batterie</string>
    <string name="pressure">Pression</string>
    <string name="temperature">Température</string>
    <string name="position">Position</string>

    <string name="btn_actualiser">Actualiser les données</string>
    <string name="btn_see_data">Voir les dernières données</string>
    <string name="btn_generate_token">Créer un nouveau token</string>
    <string name="title_activity_token">Création dun nouveau TOKEN</string>
    <string name="tf_nom">Nom</string>
    <string name="tf_token">Token</string>
    <string name="btn_create">Créer</string>


    <string name="topbar_data_activity">Données token : </string>
    <string name="toast_no_data">Aucune donnée trouvée.</string>
    <string name="toast_error">ERREUR...</string>
    <string name="toast_ask_token">Veuillez fournir un token</string>
    <string name="toast_data_refresh">Données actualisées</string>
    <string name="toast_token_not_exist">Le token nexiste pas.</string>
    <string name="topbar_token_activity">Création dun token</string>
    <string name="toast_token_created">Token créé avec succès</string>
    <string name="toast_token_existing">Le token existe déjà</string>
</resources>