<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/blue_red_bg"
    tools:context=".ui.SplashActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_token"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginBottom="75dp"
        ></TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tf_nom"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        ></TextView>

    <EditText
        android:id="@+id/tf_nom"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="25sp"
        android:gravity="center|bottom">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tf_token"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        ></TextView>

    <EditText
        android:id="@+id/tf_token"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"
        android:gravity="center|bottom">
    </EditText>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:text="@string/btn_create"
        ></Button>


</LinearLayout>