<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DataActivity"
    android:orientation="vertical">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_calendar_today_24"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"></ImageView>

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text=""
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/eseo_blue">
        </TextView>
    </RelativeLayout>




    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:id="@+id/imageItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_wb_sunny_24"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"></ImageView>

        <TextView
            android:id="@+id/textItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/luminosity"
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/txt_luminosity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text=""
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/eseo_blue"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
        </TextView>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_battery_unknown_24"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/battery"
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/txt_battery_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text=""
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/eseo_blue"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
        </TextView>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_sensors_24"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/pressure"
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/txt_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text=""
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/eseo_blue"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
        </TextView>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_device_thermostat_24"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/temperature"
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/txt_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text=""
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/eseo_blue"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
        </TextView>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_position"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_location_on_24"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/position"
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/txt_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text=""
            android:textSize="21sp"
            android:padding="20dp"
            android:textColor="@color/eseo_blue"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
        </TextView>

    </RelativeLayout>


</LinearLayout>